@@ -2,6 +2,23 @@
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-12-15</b>
 <tr bgcolor=lightgrey>
+<td>16:10
+<td>detar
+<td>
+lib/asqtad_action.h
+1.1<br>
+lib/asqtad_force_fnmat_d.c
+1.1<br>
+lib/asqtad_force_fnmat_f.c
+1.1<br>
+lib/asqtad_force_fnmat_p.c
+1.1<br>
+lib/asqtad_force.c
+1.1<br>
+<td>Add Ludmila's port of Doug's FNMAT algorithm to the Asqtad force
+</tr>
+
+<tr>
 <td>03:45
 <td>detar
 <td>
@@ -20,7 +37,7 @@ lib/dw_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-12-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:01
 <td>osborn
 <td>
@@ -38,7 +55,7 @@ lib/dw_invert_p.c
 <td><td>
 <td>tag <b>qopqdp0-7-6</b> added
 </tr>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:45
 <td>osborn
 <td>
@@ -60,7 +77,7 @@ Added preconditioner to DW inverter.
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-22</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:53
 <td>osborn
 <td>
@@ -71,7 +88,7 @@ lib/asqtad_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:54
 <td>osborn
 <td>
@@ -103,7 +120,7 @@ lib/invert_cg_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-17</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:32
 <td>osborn
 <td>
@@ -112,7 +129,7 @@ include/Makefile.am
 <td>Added generic_vD.h to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:26
 <td>osborn
 <td>
@@ -149,7 +166,7 @@ lib/invert_cg_vD_f.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:52
 <td>osborn
 <td>
@@ -181,7 +198,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:02
 <td>osborn
 <td>
@@ -210,7 +227,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:23
 <td>osborn
 <td>
@@ -219,7 +236,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:16
 <td>osborn
 <td>
@@ -228,7 +245,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:12
 <td>osborn
 <td>
@@ -243,7 +260,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:09
 <td>osborn
 <td>
@@ -274,7 +291,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>13:32
 <td>osborn
 <td>
@@ -326,7 +343,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:12
 <td>osborn
 <td>
@@ -335,7 +352,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:09
 <td>osborn
 <td>
@@ -356,7 +373,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:01
 <td>osborn
 <td>
@@ -377,7 +394,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:21
 <td>osborn
 <td>
@@ -394,7 +411,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:44
 <td>osborn
 <td>
@@ -407,7 +424,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:32
 <td>osborn
 <td>
@@ -418,7 +435,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:51
 <td>osborn
 <td>
@@ -427,7 +444,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:48
 <td>osborn
 <td>
@@ -444,7 +461,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>00:54
 <td>osborn
 <td>
@@ -509,7 +526,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:05
 <td>osborn
 <td>
@@ -522,7 +539,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:23
 <td>osborn
 <td>
@@ -533,7 +550,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:21
 <td>osborn
 <td>
@@ -573,7 +590,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:12
 <td>osborn
 <td>
@@ -582,7 +599,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:55
 <td>osborn
 <td>
@@ -627,7 +644,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:50
 <td>osborn
 <td>
@@ -658,7 +675,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:17
 <td>osborn
 <td>
@@ -697,7 +714,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:47
 <td>osborn
 <td>
@@ -708,7 +725,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:23
 <td>osborn
 <td>
@@ -729,7 +746,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>06:16
 <td>osborn
 <td>
@@ -740,7 +757,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:41
 <td>osborn
 <td>
@@ -777,7 +794,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:03
 <td>osborn
 <td>
@@ -800,7 +817,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>02:02
 <td>osborn
 <td>
@@ -811,7 +828,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:51
 <td>osborn
 <td>
@@ -828,7 +845,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:26
 <td>osborn
 <td>
@@ -839,7 +856,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:58
 <td>osborn
 <td>
@@ -848,7 +865,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:52
 <td>osborn
 <td>
@@ -863,7 +880,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:24
 <td>osborn
 <td>
@@ -874,7 +891,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:34
 <td>osborn
 <td>
@@ -883,7 +900,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:36
 <td>osborn
 <td>
@@ -898,7 +915,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:26
 <td>osborn
 <td>
@@ -954,4 +971,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Fri Dec 15 10:16:22 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Fri Dec 15 11:16:24 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
